# magrit

./: .gitignore  .magrit  .travis.yml  AUTHORS  MAINTAINERS  README.md  pom.xml
client/: assembly-descriptor.xml  magrit  magrit-build  magrit-build-log  magrit-share  magrit-status  magrit-tail  pom.xml
client/src/main/bash/: magrit  magrit-build  magrit-build-log  magrit-cat-build  magrit-config  magrit-help  magrit-monitor  magrit-send-build  magrit-share  magrit-status  magrit-wait-for  utils
client/src/main/c/: Makefile  magrit-build-log.hpp  magrit-build.hpp  magrit-cat-build.hpp  magrit-send-build.hpp  magrit.hpp  main.cpp  utils.hpp
client/src/main/c++/: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  build.cpp  build.hpp  build_cat.cpp  build_cat.hpp  build_log.cpp  build_log.hpp  build_send.cpp  build_send.hpp  config.cpp  config.hpp  config_add.cpp  config_add.hpp  config_remove.cpp  config_remove.hpp  config_use.cpp  config_use.hpp  generic_command.cpp  generic_command.hpp  magrit-build.cpp  magrit-build.hpp  magrit.cpp  magrit.hpp  main.cpp  monitor.cpp  monitor.hpp  share.cpp  share.hpp  status.cpp  status.hpp  utils.cpp  utils.hpp  wait.cpp  wait.hpp
client/src/main/c++/boost/process/: stream_behavior.hpp
client/src/main/c++/boost/process/detail/: file_handle.hpp  pipe.hpp  posix_ops.hpp  systembuf.hpp
client/src/main/c++/tests/: UtilsTest.cpp
client/src/main/c++/toolchain/: Linux-gcc-i686.cmake  Windows-mingw-i686.cmake
client/src/main/completion/: magrit
client/src/test/bash/: test-config
installer/: assembly.xml  pom.xml
installer/src/main/java/org/kercoin/magrit/: Installer.java
robot/: pom.xml  run.sh
robot/t1/: run.sh
robot/t2/: repo.bundle  run.sh
robot/utils/: robot
server/: pom.xml
server/core/: pom.xml
server/core/src/main/java/org/kercoin/magrit/: Configuration.java  CoreModule.java
server/core/src/main/java/org/kercoin/magrit/core/: Configuration.java  Context.java  CoreModule.java  Pair.java
server/core/src/main/java/org/kercoin/magrit/utils/: GitUtils.java  LoggerOutputStream.java
server/core/src/test/java/org/kercoin/magrit/: ContextTest.java
server/core/src/test/java/org/kercoin/magrit/core/: ContextTest.java
server/core/src/test/java/org/kercoin/magrit/utils/: GitUtilsTest.java
server/core/src/test/java/tests/: ConfigurationAssert.java  FilesUtils.java  GitTestsUtils.java  GuiceModulesHolder.java  MyAssertions.java
server/core/src/test/resources/keys/: dsa@localhost.pub
server/httpd/: pom.xml
server/httpd/src/main/java/org/kercoin/magrit/http/: HttpServer.java  ServletFactory.java
server/httpd/src/main/resources/web/: ws-example.html
server/httpd/src/test/java/org/kercoin/magrit/http/: ServletFactoryTest.java
server/magrit-server/: pom.xml
server/magrit-server/src/main/java/org/kercoin/magrit/: Configuration.java  Context.java  Magrit.java  MagritCommandFactory.java  MagritModule.java
server/magrit-server/src/main/java/org/kercoin/magrit/commands/: AbstractCommand.java  BuildCommand.java  CommandsProvider.java  GetStatusCommand.java  MonitorCommand.java  ReceivePackCommand.java  SyntaxErrorCommand.java  TailCommand.java
server/magrit-server/src/main/java/org/kercoin/magrit/git/: AbstractCommand.java  Context.java  GetStatusCommand.java  GitCommandFactory.java  GitUtils.java  ReceivePackCommand.java
server/magrit-server/src/test/java/org/kercoin/magrit/: MagritCommandFactoryTest.java  MagritTest.java
server/magrit-server/src/test/java/tests/: GitTestsUtils.java  GuiceModulesHolder.java  MyAssertions.java
server/magrit-server/src/test/resources/keys/: dsa@localhost.pub  rsa@localhost.pub
server/main/: pom.xml
server/main/src/main/java/org/kercoin/magrit/: ArgumentsParser.java  LogConfigurationLogger.java  Magrit.java
server/main/src/main/resources/: logback.xml
server/main/src/test/java/org/kercoin/magrit/: ArgumentsParserTest.java  MagritTest.java
server/src/main/java/org/kercoin/magrit/: Configuration.java  Context.java  Magrit.java  MagritCommandFactory.java  MagritModule.java  Service.java  ServiceException.java
server/src/main/java/org/kercoin/magrit/commands/: AbstractCommand.java  BuildCommand.java  CatBuildCommand.java  CommandsProvider.java  GetStatusCommand.java  MonitorCommand.java  PingCommand.java  ReceivePackCommand.java  SendBuildCommand.java  SyntaxErrorCommand.java  WaitForCommand.java
server/src/main/java/org/kercoin/magrit/http/: GuiceServletHolder.java  HttpServer.java  ServletDefinition.java  ServletFactory.java
server/src/main/java/org/kercoin/magrit/services/: BuildDAO.java  BuildDAOImpl.java  BuildQueueServiceImpl.java  BuildStatusesService.java  BuildStatusesServiceImpl.java  BuildTask.java  DummyUserIdentityService.java  SimpleTimeService.java  UserIdentityService.java
server/src/main/java/org/kercoin/magrit/sshd/: GitPublickeyAuthenticator.java  LocalOnlyFilter.java  LocalOnlySessionFactory.java  Server.java
server/src/main/java/org/kercoin/magrit/utils/: AuthorizedKeysDecoder.java  GitUtils.java  LoggerInputStream.java  LoggerOutputStream.java  Pair.java  UserIdentity.java
server/src/main/resources/web/: index.html  ws-example.html
server/src/test/java/org/kercoin/magrit/: ContextTest.java  MagritCommandFactoryTest.java  MagritTest.java
server/src/test/java/org/kercoin/magrit/commands/: AbstractCommandTest.java  CatBuildCommandTest.java  CommandsProviderTest.java  GetStatusCommandTest.java  SendBuildCommandTest.java  WaitForCommandTest.java
server/src/test/java/org/kercoin/magrit/http/: ServletFactoryTest.java
server/src/test/java/org/kercoin/magrit/services/: BuildDAOImplTest.java  BuildQueueServiceImplTest.java  BuildStatusesServiceImplTest.java  SimpleTimeServiceTest.java
server/src/test/java/org/kercoin/magrit/utils/: AuthorizedKeysDecoderTest.java
server/src/test/java/tests/: ConfigurationAssert.java  FilesUtils.java  GitTestsUtils.java  GuiceModulesHolder.java  MyAssertions.java
server/sshd/: pom.xml
server/sshd/src/main/java/org/kercoin/magrit/: SshdModule.java
tests/: pom.xml  run.sh
tests/t1/: run.sh
(+141 files in other folders)
